mandatmf/service-mandat.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mandat
spec:
  selector:
    app: mandat-backend
    type: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8099
      targetPort: 8099
      name: http-backend
      nodePort: 32116
