mandatmf/virtualServiceMandat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mandat-backend
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /v1/api/chapitre
    - uri:
        prefix: /v1/api/compteAuxilliaire
    - uri:
        prefix: /v1/api/gestion
    - uri:
        prefix: /v1/api/ligne_mandat_de_paiement
    - uri:
        prefix: /v1/api/mandat_de_paiement
    - uri:
        prefix: /v1/api/nature_mandat
    - uri:
        prefix: /v1/api/typologie_mandat       
    route:
    - destination:
        host: service-mandat.default.svc.cluster.local
        port:
          number: 8099
